# snake-game

./: README.md  main.py  pyproject.toml
tests/: test_draw_snake.py
